--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,76 @@
 .alert-error {
     color: red;
 }
+body{
+    margin-right: auto;
+    margin-left: auto;
+    width: 50%; 
+    background-color: beige;
+    color: rgb(92, 92, 88);
+    font-size: 11px;
+}
+.alert-error {
+    color: red;
+}
+.nameClass{
+    color: red;
+}
+.repo-selector{
+
+}
+pre{
+    display: inline;
+}
+.header{
+    display: flex;
+    align-content: center;
+    background-color: blue;
+    padding: 0.5rem  1rem;
+    align-items: center;
+    color: white;
+    margin-bottom: 1rem;
+}
+select{
+height: 2rem;
+margin-left: 0.8rem;
+}
+h4{
+    display: inline;
+    color: rgb(5, 5, 5);
+    font-size: 14px;
+    
+}
+h5,a{
+    /* color: rgb(26, 24, 24); */
+    font-size: 0.9rem;
+    display: inline;
+    font-family: sans-serif;
+}
+.all-info{
+    display: flex;
+    /* flex: 50% */
+}
+.left-side{
+    display: flex;
+    flex-direction: column;
+    flex: 50%;
+    /* border: red 1px solid; */
+    padding: 0.7rem;
+    background-color: rgb(248, 248, 248);  
+    margin-right: 1rem;
+    box-shadow: 0.2rem 0.3rem 0.4rem gray; 
+    border-radius: 0.5em;
+     
+
+
+}
+.right-side{
+    display: flex;
+    flex-direction: column;
+    flex: 50%;
+    background-color: rgb(248, 248, 248);  
+    padding: 0.7rem;
+    box-shadow: 0.2rem 0.3rem 0.4rem gray; 
+    border-radius: 0.5em;
+
+}
